# codemap

./: .gitignore  DISCUSSION.md  README.md  pyproject.toml  springmap.py
ast_scanner/: pom.xml
ast_scanner/src/main/java/dev/codemap/: Scanner.java
codemap/: cli.py  evidence.py  git_stats.py  html.py  markdown.py  model.py  resolve.py  scan.py  serve.py  snapshot.py
contrib/: codemap-pages.yml
kt_scanner/: pom.xml
kt_scanner/src/main/java/dev/codemap/: KtScanner.java
tests/: test_cli.py  test_html.py  test_java_evidence.py  test_kt_ast.py  test_markdown.py  test_model.py  test_resolve.py  test_scan.py  test_springmap.py
tests/fixture-java/src/main/java/com/example/: OrderController.java  OrderRepository.java  OrderService.java  OrderStore.java
tests/fixture-spring/src/main/kotlin/com/example/notification/: EmailClient.kt  NotificationConsumer.kt  NotificationRepository.kt
tests/fixture-spring/src/main/kotlin/com/example/order/: InventoryClient.kt  MultiAnnotationController.kt  OrderController.kt  OrderRepository.kt  OrderService.kt  SchemaAnnotatedController.kt
tests/fixture-spring/src/main/kotlin/com/example/payment/: PaymentController.kt  PaymentMapper.kt  PaymentRepository.kt  PaymentService.kt  PaymentValidator.kt  StripeClient.kt
